--- a/css/responsive.css
+++ b/css/responsive.css
@@ -44,11 +44,14 @@ html, body  	  {height: 100%;}
 and (min-width : 320px) 
 and (max-width : 480px) {
 	
-.hero		{padding:40px 0 40px 0;}
-.full 		{width:90%;}
+.hero		{padding:30px 0 30px 0;}
+.full 		{width:94%;}
 .clearPad	{height:20px;}	
 
+
+
 h1.errorPages	{font-weight: 100; font-size:80px !important; line-height:1; margin-top:20%;}
+.hero h1		{padding:20px 0 30px 0;}
 
 h1	{font-size:22px !important; line-height:1.4; padding:20px 0 10px 0;}
 h2	{font-size:18px; line-height:1.2; padding:8px 0 8px 0;}
@@ -56,9 +59,8 @@ h3	{font-size:14px; line-height:1.2; padding:10px 0 5px 0;}
 p	{font-size:12px; line-height:1.4; padding:8px 0px 8px 0 !important;}
 li 	{font-size:12px; line-height:1.4; padding:8px 0px 0px 0 !important;}
 h4	{font-size:10px; line-height:1.2; padding:10px 0 5px 0;}
-h5, p.small, li.small	{font-size:10px; line-height:1.2; padding:8px 0 4px 0;}
+h5, p.small, li.small 	{font-size:9px; line-height:1.2; padding:8px 0 4px 0;}
 h6	{font-size:10px; line-height:1.2; padding:6px 0 3px 0;}
-
 
 .left, right		{float:none !important;}
 
@@ -67,8 +69,8 @@ h6	{font-size:10px; line-height:1.2; padding:6px 0 3px 0;}
 .imgBox	img {width:100% !important; height:auto;}
 .textRight	{text-align:left !important;}
 
-li img.clientLogo	{margin:10px 20px 10px 0px; width:26%; height: auto !important;}
-li img.techLogo		{margin:20px 20px 0 0; width:27% !important; height:auto;}
+li img.clientLogo	{margin:10px 20px 10px 0px; width:40%; height: auto !important;}
+li img.techLogo		{margin:20px 20px 0 0; width:40% !important; height:auto;}
 
 
 }
@@ -182,8 +184,9 @@ a.hamburger-closed:hover	{background: url(../img/hamburger-nav@2x.png) no-repeat
 				     		background-size:58px 58px; width:29px; height:29px; display:block; float:right; margin-top:20px; border:none;}
 
 
-.site-nav ul		{padding:30px 0 5px 0; margin-top:90px; position:absolute; background-color:#fff; width:100%; margin-left:-3%;} 
-.site-nav ul li a	{display:list-item; padding: 0px 0px 25px 25px;}
+.site-nav ul		{padding:30px 0 5px 0; margin-top:90px; position:absolute; background-color:#fff; width:100%; overflow:hidden !important; margin-left:-3% !important;} 
+.site-nav ul li		{list-style:none;}
+.site-nav ul li a	{display:list-item; padding: 0px 0px 25px 25px; list-style:none;}
 
 .mobileMenu, #hamburgerClosed  	{display:none;}	
 
